# geoparquet-items

./: .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  requirements-dev.txt  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.MD
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-integration.yml
docker/: Dockerfile  build  cibuild  console  format  stac  test
scripts/: cibuild  test
src/stactools/geoparquet_items/: __init__.py  commands.py
tests/: test_commands.py  test_module.py  test_stac.py
