[metadata]
name = stactools-geoparquet-items
version = attr: stactools.geoparquet_items.__version__
description = Uses stac-geoparquet to generate a geoparquet for a list of STAC items
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthias Mohr
author_email = matthias@mohr.ws
url = https://github.com/stactools-packages/geoparquet-items
project_urls =
    Issues = https://github.com/stactools-packages/geoparquet-items/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir =
    = src
packages = find_namespace:
install_requires =
    stactools >= 0.4.0
    stac-geoparquet >= 0.2.1
    requests >= 2.0.0
    dask >= 2023.7.0
    pathlib2 >= 2.3.6

[options.packages.find]
where = src
